--- a/src/pages/nav/index.css
+++ b/src/pages/nav/index.css
@@ -14,7 +14,7 @@ li{
 }
 
 body{
-    background-color:white;
+    background-color:rgb(245, 241, 241);
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
